// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EcFileDropzone :props :isDisabled - should render as disabled 1`] = `
<div
  class="ec-file-dropzone ec-file-dropzone--is-disabled"
  data-test="ec-file-dropzone"
>
  <input
    class="ec-file-dropzone__input"
    data-test="ec-file-dropzone__input"
    disabled=""
    multiple=""
    type="file"
  />
  <svg
    class="ec-file-dropzone__img ec-file-dropzone__img--is-disabled"
    height="40"
    width="50"
  >
    <use
      href="#ec-upload-cloud"
    />
  </svg>
  <div
    class="ec-file-dropzone__title ec-file-dropzone__title--is-disabled"
    data-test="ec-file-dropzone__title"
  >
    
    
  </div>
  <div
    class="ec-file-dropzone__subtitle ec-file-dropzone__subtitle--is-disabled"
    data-test="ec-file-dropzone__subtitle"
  >
    
    
  </div>
</div>
`;

exports[`EcFileDropzone should render correctly 1`] = `
<div
  class="ec-file-dropzone"
  data-test="ec-file-dropzone"
>
  <input
    class="ec-file-dropzone__input"
    data-test="ec-file-dropzone__input"
    multiple=""
    type="file"
  />
  <svg
    class="ec-file-dropzone__img"
    height="40"
    width="50"
  >
    <use
      href="#ec-upload-cloud"
    />
  </svg>
  <div
    class="ec-file-dropzone__title"
    data-test="ec-file-dropzone__title"
  >
    
    Drag and drop
    
  </div>
  <div
    class="ec-file-dropzone__subtitle"
    data-test="ec-file-dropzone__subtitle"
  >
    
    files here or 
    <span
      class="tw-text-key-4"
    >
      browse
    </span>
    .
    
  </div>
</div>
`;
